--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="StyleSheet" href="/css/style.css">
 </head>
 <body>
+    <h2 class="head_title">cool title will help</h2>
     <p>Hello World! This is a test for my Introduction into css</p>
+    <h4 id="middletitle"> hopefully my style can change</h4>
+    <p id="middlepara">colors are fun to mess around with, font is also cool.</p>
+    <a href="/pages/notreal">wont work</a>
 </body>
 </html>
